--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,12 @@
             <version>2.18.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.9.3</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
