--- a/pom.xml
+++ b/pom.xml
@@ -42,12 +42,12 @@
             <version>2.18.1</version>
         </dependency>
 
-        <dependency>
+<!--        <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
             <version>5.9.3</version>
             <scope>test</scope>
-        </dependency>
+        </dependency>-->
 
     </dependencies>
 
